# ImageProcessor

./: CMakeLists.txt  adaptive_edge_detection_filter.cpp  adaptive_edge_detection_filter.h  bmp_24.cpp  bmp_24.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  exceptions.cpp  exceptions.h  filter.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  image.cpp  image.h  image_processor.cpp  matrix_filter.h  negative_filter.cpp  negative_filter.h  parser.cpp  parser.h  pixel.h  processor.cpp  processor.h  readme.md  sharpening_filter.cpp  sharpening_filter.h
test/: CMakeLists.txt  source.h  test_adaptive_edge_detection_filter.cpp  test_bmp.cpp  test_crop_filter.cpp  test_edge_detection_filter.cpp  test_gaussian_blur_filter.cpp  test_grayscale_filter.cpp  test_negative_filter.cpp  test_parser.cpp  test_sharpening_filter.cpp
